# simple-ANNS-problem

./: README.md  Simple ANNS Problem.pptx  程序实参.txt
ANNS-Problem-new/: CMakeLists.txt
ANNS-Problem-new/src/: Makefile  build_knn.cpp  defs.h  search.cpp  utils.h
